2007-08-24  Øyvind Kolås  <pippin@gimp.org>

	Reshuffled shifting code in fixed point code of display to improve
	quality.

	* app/display/gimpdisplayshell-render.c:
		(compute_sample): reshuffle a bit of the fixed point induced
		shifting to allow higher precision.
		(render_image_tile_fault): remove need to disable box-filter
		for some non square zoom ratios that was needed before
		compute_sample cleanup.
		, (render_image_tile_fault_one_row): fetch source sample #1
		from the correct tile.

2007-08-24  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/scatter_hsv.c: stylistic cleanup.

2007-08-24  Jakub Friedl  <jfriedl@suse.cz>

	* plug-ins/common/scatter_hsv.c: fixing
	bug #469519 and some cleanup.

2007-08-24  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: (compute_sample)
	fixed a division by zero issue.

2007-08-24  Michael Natterer  <mitch@gimp.org>

	* configure.in: applied patch from Tim Mooney which fixes
	configure output if libexif is not found. Fixes bug #469708.

2007-08-23  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: added a static global
	variable with configuration.
	(compute_sample): moved common computation of alpha*weight factors 
	for channel out of loop.

2007-08-23  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: (compute_sample),
	(render_image_tile_fault), (render_image_tile_fault_one_row):
	refactored to use arrays of tiles/source pixels instead of individual
	variables, also modified the order of the 0..8 numbers to sorted
	in increasing row-major order.

2007-08-22  Øyvind Kolås  <pippin@gimp.org>

	* app/display/gimpdisplayshell-render.c: replaced bilinear
	interpolation from next larger pyramid level with a boxfilter
	of the next larger pyramid level.

	This is probably the last update to the quality of the display
	in GIMP 2.4.

2007-08-21  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c